{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 346,
  "lineage": "417efdef-ed89-5e92-e287-bdd6b3e4b4c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cmk_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00e3476f308eb20d7",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-103-229.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.103.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0dd529e404cd6c989",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-35-221-113.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.221.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cmk_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.11",
            "association_id": "eipassoc-0a9d585033d6fe1f6",
            "domain": "vpc",
            "id": "eipalloc-08db5526e2131bec0",
            "instance": "i-002e5a6face6f075a",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d33a89d0ce22534b",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-52-78-117-225.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.117.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cmk_web",
            "aws_internet_gateway.cmk_ig",
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cmk_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4a9ad2eb120e054",
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:instance/i-002e5a6face6f075a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002e5a6face6f075a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cmk-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d33a89d0ce22534b",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083abff643e53fada",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ddcfef746acef90",
            "tags": {
              "Name": "cmk-web"
            },
            "tags_all": {
              "Name": "cmk-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc096173f1db8693"
            ]
          },
          "dependencies": [
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cmk_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:internet-gateway/igw-0e2e1802593f05243",
            "id": "igw-0e2e1802593f05243",
            "owner_id": "424215643714",
            "tags": {
              "Name": "cmk"
            },
            "tags_all": {
              "Name": "cmk"
            },
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cmk_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:loadbalancer/app/cmk-alb/184c2710f2c7b000",
            "arn_suffix": "app/cmk-alb/184c2710f2c7b000",
            "dns_name": "cmk-alb-798460555.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:loadbalancer/app/cmk-alb/184c2710f2c7b000",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cmk-alb",
            "security_groups": [
              "sg-0bc096173f1db8693"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e65555a9f67e145"
              },
              {
                "subnet_id": "subnet-06ddcfef746acef90"
              }
            ],
            "subnets": [
              "subnet-03e65555a9f67e145",
              "subnet-06ddcfef746acef90"
            ],
            "tags": {
              "Name": "cmk-alb"
            },
            "tags_all": {
              "Name": "cmk-alb"
            },
            "vpc_id": "vpc-09d732af300de7533",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cmk_lblist",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:listener/app/cmk-alb/184c2710f2c7b000/8f6695a6e20e8abf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/8e0e93b145a5f9db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:listener/app/cmk-alb/184c2710f2c7b000/8f6695a6e20e8abf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:loadbalancer/app/cmk-alb/184c2710f2c7b000",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cmk_lb",
            "aws_lb_target_group.cmk_lbtg",
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cmk_lbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/8e0e93b145a5f9db",
            "arn_suffix": "targetgroup/cmk-lbtg/8e0e93b145a5f9db",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/8e0e93b145a5f9db",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cmk-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "cmk_lbtg_att",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/8e0e93b145a5f9db-20211102053231451200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:424215643714:targetgroup/cmk-lbtg/8e0e93b145a5f9db",
            "target_id": "i-002e5a6face6f075a"
          },
          "dependencies": [
            "aws_instance.cmk_web",
            "aws_lb_target_group.cmk_lbtg",
            "aws_security_group.cmk_websg",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cmk_nga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e3476f308eb20d7",
            "connectivity_type": "public",
            "id": "nat-07bc468d642406116",
            "network_interface_id": "eni-06c82d2b89bfd46b9",
            "private_ip": "10.0.0.70",
            "public_ip": "52.78.103.229",
            "subnet_id": "subnet-06ddcfef746acef90",
            "tags": {
              "Name": "cmk-ngaa"
            },
            "tags_all": {
              "Name": "cmk-ngaa"
            }
          },
          "dependencies": [
            "aws_eip.cmk_lb_ip",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd529e404cd6c989",
            "connectivity_type": "public",
            "id": "nat-0f62fa1c8d5f058b9",
            "network_interface_id": "eni-0d8102917acbba9ca",
            "private_ip": "10.0.2.173",
            "public_ip": "3.35.221.113",
            "subnet_id": "subnet-03e65555a9f67e145",
            "tags": {
              "Name": "cmk-ngac"
            },
            "tags_all": {
              "Name": "cmk-ngac"
            }
          },
          "dependencies": [
            "aws_eip.cmk_lb_ip",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cmk_ngart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:route-table/rtb-049d9797e8bed9335",
            "id": "rtb-049d9797e8bed9335",
            "owner_id": "424215643714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07bc468d642406116",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cmk-nga-rtaa"
            },
            "tags_all": {
              "Name": "cmk-nga-rtaa"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d732af300de7533"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cmk_lb_ip",
            "aws_nat_gateway.cmk_nga",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:route-table/rtb-045723c9634b13a95",
            "id": "rtb-045723c9634b13a95",
            "owner_id": "424215643714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f62fa1c8d5f058b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cmk-nga-rtac"
            },
            "tags_all": {
              "Name": "cmk-nga-rtac"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d732af300de7533"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cmk_lb_ip",
            "aws_nat_gateway.cmk_nga",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cmk_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:route-table/rtb-063f4c6072eb81c94",
            "id": "rtb-063f4c6072eb81c94",
            "owner_id": "424215643714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2e1802593f05243",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cmk-rt"
            },
            "tags_all": {
              "Name": "cmk-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d732af300de7533"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cmk_ig",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cmk_ngartas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0554a8a1de390165f",
            "route_table_id": "rtb-049d9797e8bed9335",
            "subnet_id": "subnet-008869d5a093e91f4"
          },
          "dependencies": [
            "aws_eip.cmk_lb_ip",
            "aws_nat_gateway.cmk_nga",
            "aws_route_table.cmk_ngart",
            "aws_subnet.cmk_pri",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c53cff7a50b64106",
            "route_table_id": "rtb-045723c9634b13a95",
            "subnet_id": "subnet-08cc2a41763c6e4ab"
          },
          "dependencies": [
            "aws_eip.cmk_lb_ip",
            "aws_nat_gateway.cmk_nga",
            "aws_route_table.cmk_ngart",
            "aws_subnet.cmk_pri",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cmk_rtas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d85a6dcbde6db879",
            "route_table_id": "rtb-063f4c6072eb81c94",
            "subnet_id": "subnet-06ddcfef746acef90"
          },
          "dependencies": [
            "aws_internet_gateway.cmk_ig",
            "aws_route_table.cmk_rt",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094141b5ef21d8c32",
            "route_table_id": "rtb-063f4c6072eb81c94",
            "subnet_id": "subnet-03e65555a9f67e145"
          },
          "dependencies": [
            "aws_internet_gateway.cmk_ig",
            "aws_route_table.cmk_rt",
            "aws_subnet.cmk_pub",
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cmk_websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:security-group/sg-0bc096173f1db8693",
            "description": "http-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc096173f1db8693",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow-WEB",
            "name_prefix": "",
            "owner_id": "424215643714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cmk-sg"
            },
            "tags_all": {
              "Name": "cmk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d732af300de7533"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-008869d5a093e91f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-008869d5a093e91f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "pri-a"
            },
            "tags_all": {
              "Name": "pri-a"
            },
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-08cc2a41763c6e4ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08cc2a41763c6e4ab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "pri-c"
            },
            "tags_all": {
              "Name": "pri-c"
            },
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pridb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-098963d0075e4c018",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-098963d0075e4c018",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "pridb-a"
            },
            "tags_all": {
              "Name": "pridb-a"
            },
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-0158985a4efba468a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0158985a4efba468a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "pridb-c"
            },
            "tags_all": {
              "Name": "pridb-c"
            },
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cmk_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-06ddcfef746acef90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06ddcfef746acef90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:subnet/subnet-03e65555a9f67e145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03e65555a9f67e145",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424215643714",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "vpc_id": "vpc-09d732af300de7533"
          },
          "dependencies": [
            "aws_vpc.cmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cmk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:424215643714:vpc/vpc-09d732af300de7533",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0698fc3955a66272f",
            "default_route_table_id": "rtb-037193b33eec4c19f",
            "default_security_group_id": "sg-0d91eb9b8cb36bcc3",
            "dhcp_options_id": "dopt-390b4652",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d732af300de7533",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-037193b33eec4c19f",
            "owner_id": "424215643714",
            "tags": {
              "Name": "cmk-vpc"
            },
            "tags_all": {
              "Name": "cmk-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}